    fix toolbar checkbox item properties icon insensitive #418
    fix panel_sliders-key used as task height 0.9.2-0.9.3 #419
    reset Use-as-opener on import/install plugin; update man
    task error continue no present open task dialog
    gnome-terminal 3.10 no longer accepts --disable-factory #428
    desktop dialogs pop to top #424
    [GTK2] Preferences|Desktop table row collision #427
0.9.3   2014-01-17:
    fix memory leak on draw selection rectangle on desktop #397
    [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
    fix maximized panel sliders not restored #402
    README, man: update kernel polling instructions #403
    look in applications subdirs for .desktop file; debug info #405
    clear g_ascii_strcasecmp warning on owner sort
    case insensitive app sort, tooltips, uniq in app chooser dialog #405
    startup test for /bin/bash installed #413
    task columns default expansion to avoid flicker #235
0.9.2   2013-12-06:
    README correct packages link
    manual note full/max col widths not saved #382
    adjust maximized and fullscreen behavior #382
    add su-to-root support
    detect rename of current folder and close tab #243
    fix list view auto drag action on drop to last row #387
    add design menu Edit Script; F4 opens script in editor
    task manager absolute height #380
    fix icon/compact dbl-click selects file in selected dir #218 #389
    fix open foldername.iso as automount iso
    allow ~/ prefix in bookmarks and hacked session files
    fix task auto scroll first show
    add design menu Edit Command
    update changed translations
0.9.1   2013-11-06:
    [gtk 3.8] fix run dialog reverts to minimum size
    fix icon change not saved (bookmark, tab, devices, etc) #367
    sakura terminal use -x with single argument
    fix crash in save_settings #369
    new panel config memory #372
    fix build problem on gtk < 2.24 #368
    new root window use HOME=/root incase no env reset
    fix Export from desktop menu